--- a/views/manageteams.ejs
+++ b/views/manageteams.ejs
@@ -37,7 +37,7 @@
                     <br /> 
                     <!-- I don't know why I need this break, since the display is set to "block" in the css. -->
                     <button type="submit" form="backToConsole"
-                        name="requestType" value="manageTeams">
+                        name="requestType" value="readOnly">
                         Back to Console
                     </button>
                 </div>
