--- a/public/statistician.css
+++ b/public/statistician.css
@@ -4,6 +4,25 @@ body{
     font-family: Arial;
 }
 
+button {
+    background-color: rgb(240, 51, 51);
+    color: white;
+    border-radius: 4px;
+    margin: 10px;
+}
+
+button:disabled {
+    opacity: 0.5;
+}
+
+button:active {
+    background-color: rgb(152, 26, 26);
+}
+
+.margined{
+    margin: 10px;
+}
+
 .boxed,td{
     border-style: solid;
 }
@@ -48,6 +67,11 @@ td>*{
     text-overflow: ellipsis; 
     /* Why doesn't the above work? The table columns won't get narrower than their enclosed text. */
 }
+
+.announcements{
+    white-space: pre-wrap;
+}
+
 .fullwidth{
     width:100%
 }
@@ -58,4 +82,7 @@ td>*{
 .eighty{
     width: 80%;
     justify-self: center;
+}
+.inline{
+    display: inline-block;
 }
